2005-10-26  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/cs, src/components/debug: removed obsolete code

2005-10-26  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/scripting/*: scripting module, provides lua bindings for the main Ember system through tolua++. Very much unfinished right now, and thus disabled.

2005-10-26  Erik Hjortsberg  <erik@katastrof.nu>

	* src/services/ServerService.*: 
		* adapted to changes in new release of Eris
		* use the Avatar methods for wielding and using

2005-10-26  Erik Hjortsberg  <erik@katastrof.nu>

	* src/services/font, src/services/platform: removed obsolete code. This is replaced by the ogre code.

2005-10-26  Erik Hjortsberg  <erik@katastrof.nu>

	* src/services/Makefile.am, src/services/scripting/Makefile.am, src/services/scripting/ScriptingService.*: new sevice for scripting

2005-10-26  Erik Hjortsberg  <erik@katastrof.nu>

	* configure.ac: bumped version number, added switch for lua, increased required versions of the WF libs

2005-10-14  Erik Hjortsberg  <erik@katastrof.nu>

	* src/framework/Makefile.am, src/framework/scrap.*, src/components/ogre/input/Input.*: added support for paste operations from the system clipboard

2005-10-13  Erik Hjortsberg  <erik@katastrof.nu>

	* acinclude:m4, src/services/config/ConfigService.*, src/services/config/Makefile.am, src/framework/binreloc.*, src/framework/Makefile.am, src/framework/prefix.*, src/components/ogre/EmberOgre.cpp, src/components/ogre/Makefile.am: upgraded to binreloc 2.0

2005-10-12  Erik Hjortsberg  <erik@katastrof.nu>

	* configure.ac: added nostdinc, tar-bzip2 and check-news to get cleaner builds
	* all Makefile.am: update to adapt to nostdinc

2005-10-12  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/AvatarCamera.cpp, src/components/ogre/EmberEntityUserObject.h, src/components/ogre/EmberOgre.cpp, src/components/ogre/EmberPhysicalEntity.cpp: adapt to updated OgreOpcode

2005-10-12  Erik Hjortsberg  <erik@katastrof.nu>
